@@ -34,3 +34,21 @@ tasks.jar {
 kotlin {
     jvmToolchain(25)
 }
+
+tasks.register<Exec>("jpackage") {
+    dependsOn("jar")
+    val jarFile = tasks.jar.get().archiveFile.get().asFile
+
+    commandLine(
+        "jpackage",
+        "--input", jarFile.parentFile.absolutePath,
+        "--main-jar", jarFile.name,
+        "--main-class", "com.taskhelper.MainKt",
+        "--name", "desktop-task-helper",
+        "--app-version", project.version.toString(),
+        "--type", "app-image",
+        "--dest", layout.buildDirectory.dir("package").get().asFile.absolutePath,
+        "--java-options", "-Djava.awt.headless=false",
+        "--add-modules", "java.base,java.desktop,java.instrument,java.logging,jdk.unsupported"
+    )
+}
